Update footer text with creator credit

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <!-- Footer -->
   <footer class="footer bg-dark text-white text-center py-3">
-    <p class="mb-0 footer__text">© 2025 Barbearia Estilo Livre - Todos os direitos reservados.</p>
+    <p class="mb-0 footer__text">© 2025 Barbearia Estilo Livre - Criado por Chrys Penalber</p>
   </footer>
 
   <!-- Bootstrap JS -->
